@@ -4,14 +4,14 @@ Priority: optional
 Maintainer: Christian M. Amsüss <chrysn@fsfe.org>
 Homepage: http://christian.amsuess.com/tools/arandr/
 Build-Depends: debhelper (>= 7)
-Build-Depends-Indep: python (>= 2.5.4-1~), gettext
+Build-Depends-Indep: python (>= 2.5.4-1~), gettext, python-support
 Standards-Version: 3.8.3
 Vcs-Browser: http://gitorious.org/arandr/arandr/commits/debian
 Vcs-git: git://gitorious.org/arandr/arandr.git/
 
 Package: arandr
 Architecture: all
-Depends: ${shlibs:Depends}, ${misc:Depends}, python, x11-xserver-utils | xrandr, python-gtk2
+Depends: ${shlibs:Depends}, ${misc:Depends}, ${python:Depends}, python, x11-xserver-utils | xrandr, python-gtk2
 Description: Simple visual front end for XRandR 1.2
  ARandR is a visual front end for XRandR 1.2 (per display options), which
  provides full controll over positioning, saving and loading to/from shell
